--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<mat-toolbar>My Blog</mat-toolbar>
+
 <router-outlet></router-outlet>
+
+<mat-sidenav-container class="app-sidenav-container">
+  <mat-sidenav #sidenav mode="side" class="app-sidenav">
+    Sidenav content
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <mat-toolbar>My Blog</mat-toolbar>
+    <p><button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button></p>
+  </mat-sidenav-content>
+</mat-sidenav-container>
