--- a/src/app/home/components/sidenav/sidenav.component.scss
+++ b/src/app/home/components/sidenav/sidenav.component.scss
@@ -7,13 +7,6 @@
   min-height: 100%
 }
 
-.app-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
 .app-sidenav {
-  width: 300px;
+  width: 15rem;
 }
