--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,57 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-
+@import './util';
 
 body {
   margin: 0;
 }
+
+.bg-gray {
+  background-color: #f4f7f9;
+}
+
+.bg-base-secondary {
+  background-color: #141618;
+}
+
+.center {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.item-center {
+  align-items: center;
+}
+
+.pt3 {
+  padding-top: 1rem;
+}
+
+.ph3 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.ph4 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
