--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -2,9 +2,19 @@
   <mat-sidenav #sidenav
     [opened]="!isScreenSmall"
     [mode]="isScreenSmall ? 'over' : 'side'"
-    class="app-sidenav center ph3 pt3 bg-base-secondary white">
-    Sidenav content
-    <hr>
+    class="app-sidenav center pt3 bg-base-secondary white">
+    <h3 class="text-center">My Angular Site</h3>
+    <section class="">
+      <mat-action-list role="list">
+        <button mat-list-item routerLink="/about">
+          <span class="white">About</span>
+        </button>
+        <button mat-list-item routerLink="/">
+          <span class="white">Articles</span>
+        </button>
+      </mat-action-list>
+    </section>
+    <mat-divider class="bg-gray"></mat-divider>
     <app-footer></app-footer>
   </mat-sidenav>
 
