--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ body {
   background-color: #f4f7f9;
 }
 
+.bg-dark-gray {
+  background-color: #3c3c3c;
+}
+
 .bg-base-secondary {
   background-color: #141618;
 }
@@ -26,12 +30,24 @@ body {
   height: 100%;
 }
 
+.vh-100 {
+  height: 100vh;
+}
+
 .flex {
   display: flex;
 }
 
 .flex-column {
   flex-direction: column;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .justify-center {
@@ -53,5 +69,9 @@ body {
 .ph4 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.w15rem {
+  width: 15rem;
 }
 
