[Feat] Add About component

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,13 @@
-<p>
-  about works!
-</p>
+<div class="bg-gray">
+  <div class="flex">
+    <div class="eh-mw9 center ph3 pt3 text-center">
+      <p>About me</p>
+      <div class="pt3">
+        <img class="avatar" src="assets/images/avatar-rr.jpg" alt="">
+      </div>
+      <div class="pt5">
+        <p class="card">My name is <strong>Ricardo Rojas</strong> passionate about web technologies and cyclism, building the world with code and love.</p>
+      </div>
+    </div>
+  </div>
+</div>
