--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@ body {
   margin-left: auto;
 }
 
+.eh-mw9 {
+  max-width: 83.75rem;
+}
+
 .w-100 {
   width: 100%;
 }
@@ -59,6 +63,10 @@ body {
 }
 
 .pt3 {
+  padding-top: 1rem;
+}
+
+.pt5 {
   padding-top: 1rem;
 }
 
