[Style] Change articles layout

--- a/src/app/articles/components/article-list/article-list.component.scss
+++ b/src/app/articles/components/article-list/article-list.component.scss
@@ -1,6 +1,6 @@
 .card {
   background-color: #eaeaea;
   border: 1px solid #a1a1a1;
-  height: 300px;
-  width: 33.33333%;
+  height: 150px;
+  margin: 5px 0;
 }
