--- a/src/app/articles/components/article-list/article-list.component.html
+++ b/src/app/articles/components/article-list/article-list.component.html
@@ -1,16 +1,12 @@
-<div class="eh-mw9 pt3 center">
+<div class="eh-mw9 pt3 center w-100">
   <div class="text-center">
     <h2>Articles List</h2>
   </div>
-  <div class="eh-mw9 ph3 center flex flex-column">
-    <div class="w-100">
-      <div class="flex flex-wrap">
-        <div class="card ph3 pv3 w-100"></div>
-        <div class="card ph3 pv3 w-100"></div>
-        <div class="card ph3 pv3 w-100"></div>
-        <div class="card ph3 pv3 w-100"></div>
-        <div class="card ph3 pv3 w-100"></div>
-      </div>
-    </div>
+  <div class="ph3 center flex flex-column">
+    <div class="card w-100"></div>
+    <div class="card w-100"></div>
+    <div class="card w-100"></div>
+    <div class="card w-100"></div>
+    <div class="card w-100"></div>
   </div>
 </div>
