--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .eh-mw9 {
-  max-width: 83.75rem;
+  max-width: 60rem;
 }
 
 .w-100 {
@@ -56,6 +56,10 @@ body {
 
 .justify-center {
   justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .item-center {
