[Refactor] Reorder routes

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav #sidenav
     [opened]="!isScreenSmall"
     [mode]="isScreenSmall ? 'over' : 'side'"
-    class="w15rem vh100 center pt3 bg-base-secondary white br-goldenrod">
+    class="mat-elevation-z15 w15rem vh100 center pt3 bg-base-secondary white br-goldenrod">
     <h3 class="text-center">My Angular Site</h3>
     <div class="flex flex-column">
       <section>
