[Style] Change styles for articles

--- a/src/app/articles/components/article-list/article-list.component.html
+++ b/src/app/articles/components/article-list/article-list.component.html
@@ -3,10 +3,10 @@
     <h2>Articles List</h2>
   </div>
   <div class="ph3 center flex flex-column">
-    <div class="card w-100"></div>
-    <div class="card w-100"></div>
-    <div class="card w-100"></div>
-    <div class="card w-100"></div>
-    <div class="card w-100"></div>
+    <mat-card class="card">Simple card</mat-card>
+    <mat-card class="card">Simple card</mat-card>
+    <mat-card class="card">Simple card</mat-card>
+    <mat-card class="card">Simple card</mat-card>
+    <mat-card class="card">Simple card</mat-card>
   </div>
 </div>
