[Feature] Add Flex Layout API to Articles layout

--- a/src/app/articles/components/article-list/article-list.component.scss
+++ b/src/app/articles/components/article-list/article-list.component.scss
@@ -1,4 +1,9 @@
+.article-list-container {
+  background-color: royalblue;
+}
+
 .card {
-  height: 80px;
-  margin: 10px 0;
+  border: 1px solid black;
+  height: 200px;
+  margin-bottom: 32px;
 }
