--- a/src/app/articles/components/article-list/article-list.component.html
+++ b/src/app/articles/components/article-list/article-list.component.html
@@ -1,12 +1,52 @@
-<div class="eh-mw9 pt3 center w-100">
-  <div class="text-center">
-    <h2>Articles List</h2>
-  </div>
-  <div class="ph3 center flex flex-column">
-    <mat-card class="card">Simple card</mat-card>
-    <mat-card class="card">Simple card</mat-card>
-    <mat-card class="card">Simple card</mat-card>
-    <mat-card class="card">Simple card</mat-card>
-    <mat-card class="card">Simple card</mat-card>
-  </div>
+<div class="bg-gray center w-100 vh-100">
+    <div
+      class="eh-mw9 center w-100 pt3 ph3"
+      fxLayout="row wrap"
+      fxLayout.lt-sm="column"
+      fxLayoutAlign="space-evenly start">
+      <ng-container>
+        <mat-card
+          class="card w-100"
+          fxFlex="0 1 calc(33.3% - 32px)"
+          fxFlex.lt-md="0 1 calc(50% - 32px)"
+          fxFlex.lt-sm="100%">
+          Sample card
+        </mat-card>
+        <mat-card
+          class="card w-100"
+          fxFlex="0 1 calc(33.3% - 32px)"
+          fxFlex.lt-md="0 1 calc(50% - 32px)"
+          fxFlex.lt-sm="100%">
+          Sample card
+        </mat-card>
+        <mat-card
+          class="card w-100"
+          fxFlex="0 1 calc(33.3% - 32px)"
+          fxFlex.lt-md="0 1 calc(50% - 32px)"
+          fxFlex.lt-sm="100%">
+          Sample card
+        </mat-card>
+        <mat-card
+          class="card w-100"
+          fxFlex="0 1 calc(33.3% - 32px)"
+          fxFlex.lt-md="0 1 calc(50% - 32px)"
+          fxFlex.lt-sm="100%">
+          Sample card
+        </mat-card>
+        <mat-card
+          class="card w-100"
+          fxFlex="0 1 calc(33.3% - 32px)"
+          fxFlex.lt-md="0 1 calc(50% - 32px)"
+          fxFlex.lt-sm="100%">
+          Sample card
+        </mat-card>
+        <mat-card
+          class="card w-100"
+          fxFlex="0 1 calc(33.3% - 32px)"
+          fxFlex.lt-md="0 1 calc(50% - 32px)"
+          fxFlex.lt-sm="100%">
+          Sample card
+        </mat-card>
+      </ng-container>
+    </div>
 </div>
