--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -21,7 +21,7 @@
     </div>
   </mat-sidenav>
 
-  <mat-sidenav-content class="center bg-gray">
+  <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
