[Style] Change card style

--- a/src/app/articles/components/article-list/article-list.component.html
+++ b/src/app/articles/components/article-list/article-list.component.html
@@ -10,42 +10,60 @@
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
           fxFlex.lt-sm="100%">
-          Sample card
+          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
+          <mat-card-header>
+            <mat-card-title>Domain Driven Design</mat-card-title>
+          </mat-card-header>
         </mat-card>
         <mat-card
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
           fxFlex.lt-sm="100%">
-          Sample card
+          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
+          <mat-card-header>
+            <mat-card-title>Domain Driven Design</mat-card-title>
+          </mat-card-header>
         </mat-card>
         <mat-card
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
           fxFlex.lt-sm="100%">
-          Sample card
+          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
+          <mat-card-header>
+            <mat-card-title>Domain Driven Design</mat-card-title>
+          </mat-card-header>
         </mat-card>
         <mat-card
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
           fxFlex.lt-sm="100%">
-          Sample card
+          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
+          <mat-card-header>
+            <mat-card-title>Domain Driven Design</mat-card-title>
+          </mat-card-header>
         </mat-card>
         <mat-card
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
           fxFlex.lt-sm="100%">
-          Sample card
+          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
+          <mat-card-header>
+            <mat-card-title>Domain Driven Design</mat-card-title>
+          </mat-card-header>
         </mat-card>
         <mat-card
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
           fxFlex.lt-sm="100%">
-          Sample card
+          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
+          <mat-card-header>
+            <mat-card-title>Domain Driven Design</mat-card-title>
+          </mat-card-header>
         </mat-card>
       </ng-container>
     </div>
