[Refactor] Change folder structure of Article List

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -11,7 +11,7 @@
             <span class="white center">About</span>
           </button>
           <mat-divider class="bg-dark-gray"></mat-divider>
-          <button mat-list-item routerLink="/articles">
+          <button mat-list-item routerLink="/">
             <span class="white center">Articles</span>
           </button>
           <mat-divider class="bg-dark-gray"></mat-divider>
