[Refactor] Abstract article preview in a component

--- a/src/app/shared/artilcle-helpers/article-list.component.html
+++ b/src/app/shared/artilcle-helpers/article-list.component.html
@@ -5,66 +5,36 @@
       fxLayout.lt-sm="column"
       fxLayoutAlign="space-evenly start">
       <ng-container>
-        <mat-card
+        <app-article-preview
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%">
-          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
-          <mat-card-header>
-            <mat-card-title>Domain Driven Design</mat-card-title>
-          </mat-card-header>
-        </mat-card>
-        <mat-card
+          fxFlex.lt-sm="100%"></app-article-preview>
+        <app-article-preview
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%">
-          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
-          <mat-card-header>
-            <mat-card-title>Domain Driven Design</mat-card-title>
-          </mat-card-header>
-        </mat-card>
-        <mat-card
+          fxFlex.lt-sm="100%"></app-article-preview>
+        <app-article-preview
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%">
-          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
-          <mat-card-header>
-            <mat-card-title>Domain Driven Design</mat-card-title>
-          </mat-card-header>
-        </mat-card>
-        <mat-card
+          fxFlex.lt-sm="100%"></app-article-preview>
+        <app-article-preview
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%">
-          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
-          <mat-card-header>
-            <mat-card-title>Domain Driven Design</mat-card-title>
-          </mat-card-header>
-        </mat-card>
-        <mat-card
+          fxFlex.lt-sm="100%"></app-article-preview>
+        <app-article-preview
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%">
-          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
-          <mat-card-header>
-            <mat-card-title>Domain Driven Design</mat-card-title>
-          </mat-card-header>
-        </mat-card>
-        <mat-card
+          fxFlex.lt-sm="100%"></app-article-preview>
+        <app-article-preview
           class="card w-100"
           fxFlex="0 1 calc(33.3% - 32px)"
           fxFlex.lt-md="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%">
-          <img mat-card-image src="https://via.placeholder.com/150x100?text=DDD" alt="Photo of a Shiba Inu">
-          <mat-card-header>
-            <mat-card-title>Domain Driven Design</mat-card-title>
-          </mat-card-header>
-        </mat-card>
+          fxFlex.lt-sm="100%"></app-article-preview>
       </ng-container>
     </div>
 </div>
