--- a/src/app/shared/artilcle-helpers/article-preview.component.html
+++ b/src/app/shared/artilcle-helpers/article-preview.component.html
@@ -1,10 +1,8 @@
 <mat-card>
-  <a>
+  <a [routerLink]="['/article', article.id]" class= "preview-link">
     <img
       mat-card-image
-      src="{{ article.img }}"/>
-    <mat-card-header>
-      <mat-card-title>{{ article.title }}</mat-card-title>
-    </mat-card-header>
+      src="{{ article.thumbnail }}"/>
+      <h1>{{ article.title }}</h1>
   </a>
 </mat-card>
