[Style] Add styles to Edit page && add Edit && preview tabs

--- a/src/app/modules/articles/pages/edit/edit.component.html
+++ b/src/app/modules/articles/pages/edit/edit.component.html
@@ -1,3 +1,31 @@
-<p>
-  edit works!
-</p>
+<div class="edit-page bg-gray center vh-100 ph3">
+    <div class="pt3 text-center">
+        <h1>Edit</h1>
+        <mat-tab-group>
+            <mat-tab label="Edit">
+              <form [formGroup]="editForm" class="eh-mv6 pt3">
+                <fieldset [disabled]="isSubmitting" class="flex flex-column">
+                  <fieldset>
+                    <input class="w-100" matInput type="text"
+                      formControlName="title"
+                      [(ngModel)]="article.title">
+                  </fieldset>
+                  <fieldset>
+                    <textarea class="w-100" type="text"
+                      formControlName="body"
+                      [(ngModel)]="article.body">
+                    </textarea>
+                  </fieldset>
+
+                  <button mat-flat-button
+                    [disabled]="isSubmitting"
+                    color="primary"
+                    type="button"
+                    (click)="submitForm()">Submit</button>
+                </fieldset>
+              </form>
+            </mat-tab>
+            <mat-tab label="Preview"> Content 2 </mat-tab>
+          </mat-tab-group>
+    </div>
+</div>
