[Feature] Add the New page && implement edit correctly

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -22,6 +22,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
+    <app-toolbar></app-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
