--- a/src/app/modules/articles/pages/edit/edit.component.html
+++ b/src/app/modules/articles/pages/edit/edit.component.html
@@ -1,31 +1,6 @@
 <div class="edit-page bg-gray center vh-100 ph3">
     <div class="pt3 text-center">
         <h1>Edit</h1>
-        <mat-tab-group>
-            <mat-tab label="Edit">
-              <form [formGroup]="editForm" class="eh-mv6 pt3">
-                <fieldset [disabled]="isSubmitting" class="flex flex-column">
-
-                  <fieldset>
-                    <textarea class="w-100" type="text"
-                      formControlName="body"
-                      [(ngModel)]="article.body">
-                    </textarea>
-                  </fieldset>
-
-                  <button mat-flat-button
-                    [disabled]="isSubmitting"
-                    color="primary"
-                    type="button"
-                    (click)="submitForm()">Submit</button>
-                </fieldset>
-              </form>
-            </mat-tab>
-            <mat-tab label="Preview">
-              <markdown>
-                {{ article.body }}
-              </markdown>
-            </mat-tab>
-          </mat-tab-group>
+        <app-form></app-form>
     </div>
 </div>
