--- a/src/app/modules/articles/components/form.component.html
+++ b/src/app/modules/articles/components/form.component.html
@@ -23,7 +23,7 @@
       </form>
     </mat-tab>
     <mat-tab label="Preview">
-      <markdown [data]="article.body"></markdown>
+      <markdown lineNumbers [start]="1" [data]="article.body"></markdown>
     </mat-tab>
   </mat-tab-group>
 </div>
