--- a/src/app/modules/articles/pages/show/show.component.html
+++ b/src/app/modules/articles/pages/show/show.component.html
@@ -1,5 +1,5 @@
 <div class="article-page bg-gray center vh-100 ph3">
-  <button mat-button [routerLink]="['/article/', article.id, 'edit']">Edit Article</button>
+  <button mat-button [routerLink]="['/article/', article.title, 'edit']">Edit Article</button>
 
   <div class="content eh-mw6 center w-100 pt3">
     <markdown lineNumbers [start]="1" [data]="article.body"></markdown>
