--- a/src/app/shared/artilcle-helpers/article-preview.component.html
+++ b/src/app/shared/artilcle-helpers/article-preview.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <a [routerLink]="['article/', article.title]" class= "preview-link">
+  <a [routerLink]="['/article', article._id]" class= "preview-link">
       <h1>{{ article.title }}</h1>
   </a>
 </mat-card>
