--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 a {text-decoration: none}
 
 body {
+  font-family: Helvetica;
   margin: 0;
   font-size: 16px;
 }
@@ -97,5 +98,9 @@ body {
 
 .w15rem {
   width: 15rem;
+}
+
+.b-radius4 {
+  border-radius: 4px;
 }
 
