--- a/src/app/shared/artilcle-helpers/article-preview.component.html
+++ b/src/app/shared/artilcle-helpers/article-preview.component.html
@@ -1,5 +1,11 @@
 <mat-card>
-  <a [routerLink]="['article/', article.title]" class= "preview-link">
-      <h1>{{ article.title }}</h1>
-  </a>
+	<div class="preview-link">
+		<a [routerLink]="['/article', article._id]">
+		  <h3>{{ article.title }}</h3>
+		</a>
+		<p>
+		  {{ article.body }}
+		</p>
+		<a [routerLink]="['/article', article._id]">Read 👽</a>
+	</div>
 </mat-card>
