--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,13 +1,14 @@
 <mat-toolbar color="primary">
   <div class="eh-mv9">
 
+    <div *appShowAuthed="true">
+      <button mat-flat-button [routerLink]="['/article/new']">Create Article</button>
+      <button mat-button (click)="logout()">Logout</button>
+    </div>
+
     <div *appShowAuthed="false">
       <button mat-button [routerLink]="['/login']">Login</button>
     </div>
 
-    <div *appShowAuthed="true">
-      <button mat-flat-button [routerLink]="['/article/new']">Create Article</button>
-      <button mat-button [routerLink]="['/logout']">Logout</button>
-    </div>
   </div>
 </mat-toolbar>
